# BioFeatureFactory

./: .gitignore  CITATION.cff  CITING.md  LICENSE  README.md  pyproject.toml  requirements.txt
EVmutation/: README.md  evmutation-pipeline.py
NetSurfP3/: README.md  netsurfp3-pipeline.py
RNAfold/: README.md  run_viennaRNA_pipeline.py
alphafold3/: README.md  alphafold3_pipeline.py
biofeaturefactory/EVmutation/: README.md  evmutation-pipeline.py  evmutation_controller.py  evmutation_pipeline.py
biofeaturefactory/NetSurfP3/: README.md  netsurfp3-pipeline.py  netsurfp3_pipeline.py
biofeaturefactory/RNAfold/: README.md  run_viennaRNA_pipeline.py
biofeaturefactory/alphafold3/: README.md  alphafold3_pipeline.py
biofeaturefactory/codon_usage/: README.md  (+2 more)
codon_usage/: codon-usage-pipeline.py
dependencies/: exon_aware_mapping.py  utility.py  vcf_converter.py
docker/: Dockerfile  README.md  build-container.sh  netnglyc_stub  signalp_stub
genesplicer/: README.md  convert_to_genomic_mutations.py  genesplicer_ensemble.py  run_genesplicer_pipeline.py
miranda/: README.md  convert_to_transcript_mutations.py  miranda-ensemble.py  run-miranda-pipeline.py
netMHC/: README.md  netmhc-pipeline.py
netNglyc/: Dockerfile  README.md  full-docker-netnglyc-pipeline.py  netnglyc-pipeline.py
netphos/: README.md  netphos-pipeline.py
rare_codon/: README.md  rare-codon-pipeline.py
scripts/: README.md  bootstrap.sh  build_db.sh  build_refseq_ftp_paths.awk
spliceai/: README.md  annot_to_spliceai.py  main.nf  spliceai-parser.py  spliceai-pipeline-controller.py  spliceai-tracker.py
test/: README.md
utils/: __init__.py  codon-msa-pipeline.py  exon_aware_mapping.py  msa-generation-pipeline.py  utility.py  vcf_converter.py
(+49 files in other folders)
