[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biofeaturefactory"
version = "0.1.0"
description = "BioFeatureFactory — feature extraction for disease-associated synonymous mutations"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["biofeaturefactory*"]
