[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biofeaturefactory"
version = "0.1.0"
description = "BioFeatureFactory — feature extraction for disease-associated synonymous mutations"
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.79",
    "pandas>=1.3.0",
    "numpy>=1.20.0,<2",
    "requests>=2.25.0",
    "pysam>=0.19.0",
]

[tool.setuptools.packages.find]
include = ["biofeaturefactory*"]
